--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,3 +46,9 @@ a{
 .disabled-link {
   pointer-events: none;
 }
+
+ .botonDashboard:hover {
+  box-shadow: 0 12px 16px 0 rgba(147, 140, 0, 0.24), 0 17px 50px 0 rgba(62, 65, 46, 0.19);
+  background-color: #faffc4;
+
+} 
